RDKB-41431 : service_dhcpv6_client.sh C conversion
Reason for change: service_dhcpv6_client.sh C conversion
Test Procedure: dibbler Client should comeup properly and no new regressions should be caused
Risks: Low
Signed-off-by:BudimeVigneshwar_Prasad@comcast.com

RDKB-44037 : Revssh is not working properly

Reason for change: Revssh is not working properly after switching between the LAN modes, whereas forward SSH works.
Test Procedure: After moving from router to bridge, dibbler client should be running and device should have erouter0 global ipv6
Risks: Low
Signed-off-by:BudimeVigneshwar_Prasad@comcast.com

Change-Id: Ie300333c7474f81e4c86378cda8d06c2e6245856

RDKB-44197 : core net lib exception for service_dhcpv6_client

Reason for change: Adding core net lib exception for service_dhcpv6_client handling
Test Procedure: service_dhcpv6_client handling should not be working for core_net_lib disabled devices
Risks: Low
Signed-off-by:BudimeVigneshwar_Prasad@comcast.com

Change-Id: Iedfde1b22c7bca33428b9bb824df2cf89d5531a2

--- a/configure.ac
+++ b/configure.ac
@@ -127,6 +127,7 @@ AM_CONDITIONAL(CORE_NET_LIB_FEATURE_SUPPORT, test x"$core_net_lib_feature_suppor
 AM_COND_IF( [CORE_NET_LIB_FEATURE_SUPPORT], [
 AC_CONFIG_FILES([
    source/service_dhcp/Makefile
+   source/service_dhcpv6_client/Makefile
 ])] )
 
 FEATURE_RDKB_EXTENDER=no
